Edit: fix logic, update docs
